Jfr: Fix some error for test jdk_test.