@@ -29,10 +29,9 @@ package jdk.jfr.event.gc.collection;
  * @test
  *
  *           & vm.opt.ExplicitGCInvokesConcurrent != false
- * @library /lib/testlibrary
+ * @library /lib/testlibrary /
  *
  * @run main/othervm -XX:+UnlockExperimentalVMOptions -XX:-UseFastUnorderedTimeStamps -Xmx32m -Xmn8m -XX:+UseConcMarkSweepGC -XX:+ExplicitGCInvokesConcurrent jdk.jfr.event.gc.collection.TestGCEventMixedWithCMSConcurrent
- * good debug flags: -Xlog:gc+heap=trace,gc*=debug
  */
 public class TestGCEventMixedWithCMSConcurrent {
     public static void main(String[] args) throws Throwable {
