@@ -29,10 +29,9 @@ package jdk.jfr.event.gc.collection;
  * @test
  *
  *           & vm.opt.ExplicitGCInvokesConcurrent != false
- * @library /lib/testlibrary
+ * @library /lib/testlibrary /
  *
  * @run main/othervm -XX:+UnlockExperimentalVMOptions -XX:-UseFastUnorderedTimeStamps -Xmx32m -Xmn8m -XX:+UseG1GC -XX:+ExplicitGCInvokesConcurrent jdk.jfr.event.gc.collection.TestGCEventMixedWithG1ConcurrentMark
- * good debug flags: -Xlog:gc+heap=trace,gc*=debug
  */
 // TODO: Try to run without: -XX:+UnlockExperimentalVMOptions XX:-UseFastUnorderedTimeStamps
 public class TestGCEventMixedWithG1ConcurrentMark {
