@@ -37,7 +37,7 @@ import jdk.testlibrary.jfr.Events;
 /**
  * @test
  *
- * @library /lib/testlibrary
+ * @library /lib/testlibrary /
  *
  * @run main jdk.jfr.event.gc.detailed.TestEvacuationFailedEvent
  */
@@ -47,10 +47,10 @@ public class TestEvacuationFailedEvent {
     private final static String JFR_FILE = "TestEvacuationFailedEvent.jfr";
     private final static int BYTES_TO_ALLOCATE = 1024 * 512;
 
-    public static void main(String[] args) throws Exception {
+    public static void main(String[] args) throws Throwable {
         String[] vmFlags = {"-XX:+UnlockExperimentalVMOptions", "-XX:-UseFastUnorderedTimeStamps",
             "-Xmx64m", "-Xmn60m", "-XX:-UseDynamicNumberOfGCThreads", "-XX:ParallelGCThreads=3",
-            "-XX:MaxTenuringThreshold=0", "-Xlog:gc*=debug", "-XX:+UseG1GC"};
+            "-XX:MaxTenuringThreshold=0", "-XX:+UseG1GC"};
 
         if (!ExecuteOOMApp.execute(EVENT_SETTINGS_FILE, JFR_FILE, vmFlags, BYTES_TO_ALLOCATE)) {
             System.out.println("OOM happened in the other thread(not test thread). Skip test.");
