@@ -28,7 +28,7 @@ package jdk.jfr.event.gc.detailed;
 /**
  * @test
  *
- * @library /lib/testlibrary
+ * @library /lib/testlibrary /
  * @run main jdk.jfr.event.gc.detailed.TestPromotionFailedEventWithParallelScavenge
  */
 public class TestPromotionFailedEventWithParallelScavenge {
@@ -36,6 +36,6 @@ public class TestPromotionFailedEventWithParallelScavenge {
         PromotionFailedEvent.test("TestPromotionFailedEventWithParallelScavenge",
             new String[] {"-XX:+UnlockExperimentalVMOptions", "-XX:-UseFastUnorderedTimeStamps",
             "-Xmx32m", "-Xmn30m", "-XX:-UseDynamicNumberOfGCThreads", "-XX:ParallelGCThreads=3",
-            "-XX:MaxTenuringThreshold=0", "-Xlog:gc*=debug", "-XX:+UseParallelGC"});
+            "-XX:MaxTenuringThreshold=0", "-XX:+UseParallelGC"});
     }
 }
