@@ -40,9 +40,9 @@ import jdk.testlibrary.jfr.Events;
 
 /**
  * @test
- * @library /lib/testlibrary
+ * @library /lib/testlibrary /
  * @modules jdk.jfr/jdk.jfr.internal.test
- * @run main/othervm -XX:TLABSize=2k -Xlog:gc+tlab=trace jdk.jfr.event.oldobject.TestFieldInformation
+ * @run main/othervm -XX:TLABSize=2k jdk.jfr.event.oldobject.TestFieldInformation
  */
 public class TestFieldInformation {
 
