@@ -29,14 +29,16 @@ import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.stream.Stream;
+import java.nio.file.Paths;
 
 import jdk.jfr.Recording;
 import jdk.testlibrary.Asserts;
+import jdk.testlibrary.ProcessTools;
 
 /**
  * @test
  * @bug 8220657
- * @library /lib/testlibrary
+ * @library /lib/testlibrary /
  * @run main/othervm jdk.jfr.jcmd.TestJcmdDumpWithFileName
  */
 public class TestJcmdDumpWithFileName {
@@ -48,7 +50,7 @@ public class TestJcmdDumpWithFileName {
     }
 
     private static void testDumpAll() throws Exception {
-        Path p = Path.of("testDumpAll.jfr").toAbsolutePath();
+        Path p = Paths.get("testDumpAll.jfr").toAbsolutePath();
         try (Recording r = new Recording()) {
             r.setName("testDumpAll");
             r.setDestination(p);
@@ -63,7 +65,7 @@ public class TestJcmdDumpWithFileName {
     }
 
     private static void testDumpNamed() throws Exception {
-        Path p = Path.of("testDumpNamed.jfr").toAbsolutePath();
+        Path p = Paths.get("testDumpNamed.jfr").toAbsolutePath();
         try (Recording r = new Recording()) {
             r.setName("testDumpNamed");
             r.setDestination(p);
@@ -78,13 +80,13 @@ public class TestJcmdDumpWithFileName {
     }
 
     private static void testDumpNamedWithFilename() throws Exception {
-        Path p = Path.of("testDumpNamedWithFilename.jfr").toAbsolutePath();
-        Path override = Path.of("override.jfr").toAbsolutePath();
+        Path p = Paths.get("testDumpNamedWithFilename.jfr").toAbsolutePath();
+        Path override = Paths.get("override.jfr").toAbsolutePath();
         try (Recording r = new Recording()) {
             r.setName("testDumpNamedWithFilename");
             r.setDestination(p);
             r.start();
-
+            
             JcmdHelper.jcmd("JFR.dump", "name=testDumpNamedWithFilename", "filename=" + override.toString());
 
             Asserts.assertFalse(namedFile(p), "Unexpected file: " + p.toString());
@@ -98,21 +100,18 @@ public class TestJcmdDumpWithFileName {
         return Files.exists(dumpFile) && (Files.size(dumpFile) > 0);
     }
 
-    private static boolean generatedFile() throws IOException {
-        long pid = ProcessHandle.current().pid();
-        Stream<Path> stream = Files.find(Path.of("."), 1, (p, a) -> p.toString()
+    private static boolean generatedFile() throws Exception {
+        long pid = ProcessTools.getProcessId();
+        Stream<Path> stream = Files.find(Paths.get("."), 1, (p, a) -> p.toString()
                                                                      .matches("^.*hotspot-pid-" + pid + "-[0-9_]+\\.jfr$") && (a.size() > 0L));
-        try (stream) {
-            return stream.findAny()
-                         .isPresent();
-        }
+        return stream.findAny()
+                     .isPresent();
     }
 
     private static void cleanup() throws IOException {
-        Stream<Path> stream = Files.find(Path.of("."), 1, (p, a) -> p.toString().endsWith(".jfr"));
-        try (stream) {
-            stream.forEach(p -> p.toFile().delete());
-        }
+        Stream<Path> stream = Files.find(Paths.get("."), 1, (p, a) -> p.toString().endsWith(".jfr"));
+        
+        stream.forEach(p -> p.toFile().delete());
     }
 
 }
